[gd_scene load_steps=2 format=3 uid="uid://bm6hakmsclc8g"]

[ext_resource type="Script" path="res://Scripts/components/HealthComp.gd" id="1_by2s6"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_by2s6")
MAX_HEALTH = 200.0

[node name="HRegenTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="HRegenTimer" to="." method="_on_h_regen_timer_timeout"]
